--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "sqlite3": "^5.1.7",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "cookie-parser": "^1.4.6"
+
   }
 }
