--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "sqlite3": "^5.1.7",
     "pg": "^8.11.0",
-    "cookie-parser": "^1.4.6"
-
+    "sqlite3": "^5.1.7"
   }
 }
